--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
     "express": "^4.17.1",
+    "pug": "^2.0.4",
     "socket.io": "^2.3.0"
   }
 }
