--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:server": "nodemon --exec babel-node ./src/server.js"
+    "dev:server": "nodemon --exec babel-node ./src/server.js --ignore /assets/** --ignore /src/static/**",
+    "dev:assets": "gulp"
   },
   "author": "",
   "license": "ISC",
@@ -13,8 +14,18 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
+    "babelify": "^10.0.0",
+    "del": "^5.1.0",
     "express": "^4.17.1",
+    "gulp": "^4.0.2",
+    "gulp-browserify": "^0.5.1",
+    "gulp-sass": "^4.0.2",
+    "morgan": "^1.10.0",
     "pug": "^2.0.4",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2"
   }
 }
